# shoveler

./: .gitignore  README.md  pyproject.toml  shoveler.spec
.github/: copilot-instructions.md
.github/workflows/: ci.yml  desktop-release.yml  python-publish.yml
docs/: concepts.md  index.md  quickstart.md  troubleshooting.md
src/shoveler/: __init__.py  __main__.py  db.py  db_status_widget.py  editor.py  main_window.py  query_tab.py  results_panel.py  schema_panel.py
src/shoveler/assets/themes/: dark.qss  light.qss  vivid.qss
src/shoveler/config/: syntax.py  text.py  theme.py  ui.py
tests/: test_db.py  test_editor.py
